--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
     "dev": "ts-node --transpile-only -r dotenv/config src/server.ts",
     "dev:seed": "ts-node --transpile-only -r dotenv/config scripts/dev-seed.ts",
+    "dev:seed:chocolate": "ts-node --transpile-only -r dotenv/config scripts/chocolate-seed.ts",
     "start": "node dist/server.js"
   },
   "dependencies": {
