--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate:up": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register ./node_modules/.bin/node-pg-migrate up --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
     "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
     "dev": "ts-node --transpile-only -r dotenv/config src/server.ts",
+    "dev:watch": "nodemon --watch src --ext ts --exec \"ts-node --transpile-only -r dotenv/config src/server.ts\"",
     "dev:seed": "ts-node --transpile-only -r dotenv/config scripts/dev-seed.ts",
     "dev:seed:chocolate": "ts-node --transpile-only -r dotenv/config scripts/chocolate-seed.ts",
     "start": "node dist/server.js"
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.16.0",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   },
