--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL=postgres://user:password@localhost:5432/inventory_manager
 PORT=3000
+JWT_SECRET=replace-with-strong-secret
+ACCESS_TOKEN_TTL=15m
+REFRESH_TOKEN_TTL_DAYS=30
