--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "node-pg-migrate": "^7.6.0",
     "pg": "^8.11.5",
     "uuid": "^11.0.3",
@@ -26,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.16.0",
+    "@types/cookie-parser": "^1.4.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
