Phase 5: shared exports and path aliases

--- a/ui/tsconfig.node.json
+++ b/ui/tsconfig.node.json
@@ -6,6 +6,16 @@
     "module": "ESNext",
     "types": ["node"],
     "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@shared": ["src/shared/index.ts"],
+      "@shared/*": ["src/shared/*"],
+      "@features/*": ["src/features/*"],
+      "@components/*": ["src/components/*"],
+      "@lib/*": ["src/lib/*"],
+      "@api/*": ["src/api/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
