--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-virtual": "^3.13.16",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
