--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "ioredis": "^5.9.0",
     "jsonwebtoken": "^9.0.2",
     "node-pg-migrate": "^7.6.0",
     "pg": "^8.11.5",
@@ -28,10 +29,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.16.0",
-    "@types/cookie-parser": "^1.4.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
