--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "ioredis": "^5.9.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "node-pg-migrate": "^7.6.0",
     "pg": "^8.11.5",
     "uuid": "^11.0.3",
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.21",
     "@types/ioredis": "^4.28.10",
     "@types/node": "^20.11.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
