--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-virtual": "^3.13.16",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
