Enforce inventory write boundaries, idempotency, and health gating
- centralize inventory movement writes with ledger writer + unique external_ref
- add inventory health checks, job, and admin view
- add request context/logging, OTEL, health endpoints, timeouts
- add integration resilience wrapper and comms baseline tooling
- add domain boundaries, linting, and path aliases

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,36 @@ PORT=3000
 JWT_SECRET=replace-with-strong-secret
 ACCESS_TOKEN_TTL=15m
 REFRESH_TOKEN_TTL_DAYS=30
+JSON_BODY_LIMIT=1mb
+
+# Database timeouts
+DB_STATEMENT_TIMEOUT_MS=5000
+DB_LOCK_TIMEOUT_MS=2000
+
+# Inventory movement idempotency enforcement
+ENFORCE_INVENTORY_MOVEMENT_EXTERNAL_REF=true
+
+# Inventory health gate thresholds
+INVENTORY_HEALTH_MAX_VARIANCE_PCT=1
+INVENTORY_HEALTH_MAX_VALUE_VARIANCE=0
+INVENTORY_HEALTH_MAX_CYCLE_VARIANCE_PCT=2
+INVENTORY_HEALTH_FAIL_ON_NEGATIVE=true
+INVENTORY_HEALTH_CRON=0 * * * *
+
+# Integration resiliency defaults
+INTEGRATION_TIMEOUT_MS=5000
+INTEGRATION_RETRIES=2
+INTEGRATION_RETRY_BASE_MS=200
+INTEGRATION_RETRY_MAX_MS=2000
+INTEGRATION_RETRY_JITTER_MS=100
+
+# Health check timeouts
+HEALTH_READY_TIMEOUT_MS=2000
+HEALTH_DB_TIMEOUT_MS=1500
+HEALTH_REDIS_TIMEOUT_MS=1000
+# REQUIRED_SCHEMA_VERSION=1771300000000
+
+# OpenTelemetry
+OTEL_ENABLED=false
+OTEL_SERVICE_NAME=inventory-manager-api
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
