--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "private": true,
   "scripts": {
     "migrate": "npm run migrate:up",
-    "migrate:up": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register ./node_modules/.bin/node-pg-migrate up --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
-    "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
-    "dev": "ts-node --transpile-only -r dotenv/config src/server.ts",
-    "dev:watch": "nodemon --watch src --ext ts --exec \"ts-node --transpile-only -r dotenv/config src/server.ts\"",
-    "db:reset": "ts-node --transpile-only -r dotenv/config scripts/db-reset.ts",
+    "migrate:up": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate up --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
+    "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations",
+    "dev": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/server.ts",
+    "dev:watch": "nodemon --watch src --ext ts --exec \"ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/server.ts\"",
+    "db:reset": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/db-reset.ts",
     "db:reset:migrate": "npm run db:reset && npm run migrate",
-    "dev:seed": "ts-node --transpile-only -r dotenv/config scripts/dev-seed.ts",
-    "dev:seed:chocolate": "ts-node --transpile-only -r dotenv/config scripts/chocolate-seed.ts",
-    "seed:phase0": "ts-node --transpile-only -r dotenv/config scripts/phase0-seed.ts",
+    "dev:seed": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/dev-seed.ts",
+    "dev:seed:chocolate": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/chocolate-seed.ts",
+    "seed:phase0": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/phase0-seed.ts",
     "test:api": "node --test tests/api/*.test.mjs",
-    "start": "node dist/server.js"
+    "lint:inventory-writes": "ts-node --transpile-only -r dotenv/config scripts/check-inventory-writes.ts",
+    "inventory:health": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/inventory-health.ts",
+    "start": "node -r tsconfig-paths/register dist/server.js"
   },
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-node": "^0.50.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.50.0",
+    "@opentelemetry/resources": "^1.24.0",
+    "@opentelemetry/sdk-node": "^0.50.0",
+    "@opentelemetry/semantic-conventions": "^1.24.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.3",
@@ -36,7 +43,13 @@
     "@types/node": "^20.11.0",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.1.0",
+    "tsconfig-paths": "^4.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   },
