outbox + BullMQ workers + event bridge, plus gated request logging

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ JWT_SECRET=replace-with-strong-secret
 ACCESS_TOKEN_TTL=15m
 REFRESH_TOKEN_TTL_DAYS=30
 JSON_BODY_LIMIT=1mb
+LOG_HTTP_REQUESTS=false
 
 # Database timeouts
 DB_STATEMENT_TIMEOUT_MS=5000
@@ -11,6 +12,29 @@ DB_LOCK_TIMEOUT_MS=2000
 
 # Inventory movement idempotency enforcement
 ENFORCE_INVENTORY_MOVEMENT_EXTERNAL_REF=true
+ENFORCE_CANONICAL_MOVEMENT_FIELDS=false
+# If set, movement lines created after this ISO timestamp must include canonical fields
+CANONICAL_MOVEMENT_REQUIRED_AFTER=
+
+# Worker + queues (BullMQ)
+QUEUE_REDIS_URL=
+RUN_INPROCESS_JOBS=false
+WORKER_REGISTER_JOBS=true
+WORKER_CONCURRENCY_CRITICAL=2
+WORKER_CONCURRENCY_HEAVY=1
+WORKER_CONCURRENCY_OUTBOX=4
+OUTBOX_POLL_INTERVAL_MS=5000
+OUTBOX_BATCH_SIZE=25
+OUTBOX_MAX_ATTEMPTS=8
+OUTBOX_RETRY_BASE_MS=2000
+OUTBOX_RETRY_MAX_MS=60000
+OUTBOX_RETRY_JITTER_MS=1000
+JOB_RETRY_ATTEMPTS=3
+JOB_RETRY_BACKOFF_MS=5000
+
+# Event bridge
+EVENTS_CHANNEL=inventory:events
+EVENT_SOURCE_ID=
 
 # Inventory health gate thresholds
 INVENTORY_HEALTH_MAX_VARIANCE_PCT=1
