--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:api": "node --test tests/api/*.test.mjs",
     "lint:inventory-writes": "ts-node --transpile-only -r dotenv/config scripts/check-inventory-writes.ts",
     "inventory:health": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/inventory-health.ts",
+    "backfill:movement-canonical": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/backfill-movement-canonical.ts",
+    "backfill:inventory-balance": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/backfill-inventory-balance.ts",
+    "worker": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/worker.ts",
     "start": "node -r tsconfig-paths/register dist/server.js"
   },
   "dependencies": {
@@ -25,6 +28,7 @@
     "@opentelemetry/sdk-node": "^0.50.0",
     "@opentelemetry/semantic-conventions": "^1.24.0",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^4.12.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
