Implement inventory change cursoring and polling invalidation
If you want a longer, scoped version:

Add outbox event_seq + /inventory/changes and UI polling invalidation

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,1 +1,4 @@
 VITE_API_BASE_URL=http://localhost:3000
+VITE_INVENTORY_CHANGES_POLLING=false
+VITE_INVENTORY_CHANGES_POLL_INTERVAL_MS=15000
+VITE_INVENTORY_CHANGES_LIMIT=200
