--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ OUTBOX_MAX_ATTEMPTS=8
 OUTBOX_RETRY_BASE_MS=2000
 OUTBOX_RETRY_MAX_MS=60000
 OUTBOX_RETRY_JITTER_MS=1000
+OUTBOX_RETENTION_DAYS=7
+OUTBOX_RETENTION_CRON=0 3 * * *
+OUTBOX_RETENTION_BATCH=1000
+OUTBOX_RETENTION_MAX_BATCHES=10
 JOB_RETRY_ATTEMPTS=3
 JOB_RETRY_BACKOFF_MS=5000
 
