--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,10 @@ INTEGRATION_RETRY_BASE_MS=200
 INTEGRATION_RETRY_MAX_MS=2000
 INTEGRATION_RETRY_JITTER_MS=100
 
+# Import limits
+IMPORT_MAX_BYTES=10485760
+IMPORT_MAX_ROWS=50000
+
 # Health check timeouts
 HEALTH_READY_TIMEOUT_MS=2000
 HEALTH_DB_TIMEOUT_MS=1500
