ci/tests: randomize admin emails and tenant slugs; serialize CI tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run migrate:up
       - name: Start server
         run: |
-          npm run dev > server.log 2>&1 &
+          nohup npm run dev > server.log 2>&1 &
           echo $! > server.pid
       - name: Wait for readiness
         run: |
@@ -54,7 +54,7 @@ jobs:
           cat server.log
           exit 1
       - name: Run API tests
-        run: npm run test:api
+        run: node --test --test-concurrency=1 tests/api/*.test.mjs
       - name: Stop server
         if: always()
         run: |
