chore(devdb): improve reset/conn-check safety and docs
- update reset/conn-check scripts to warn on placeholder user and include host/port/db/user in errors
- add db:conn:check npm script and remove dotenv preload from dev reset
- refresh README dev DB examples and guidance

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev:watch": "nodemon --watch src --ext ts --exec \"ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/server.ts\"",
     "db:reset": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/db-reset.ts",
     "db:reset:migrate": "npm run db:reset && npm run migrate",
+    "db:reset:dev": "ts-node --transpile-only -r tsconfig-paths/register scripts/reset-dev-db.ts",
+    "db:reset-and-migrate:dev": "npm run db:reset:dev && npm run migrate:up",
+    "db:conn:check": "ts-node --transpile-only -r tsconfig-paths/register scripts/db-conn-check.ts",
     "dev:seed": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/dev-seed.ts",
     "dev:seed:chocolate": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/chocolate-seed.ts",
     "seed:phase0": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/phase0-seed.ts",
