--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
     "dev:seed": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/dev-seed.ts",
     "dev:seed:chocolate": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/chocolate-seed.ts",
     "seed:phase0": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/phase0-seed.ts",
-    "pretest:api": "npm run migrate:up",
+    "pretest:api": "npm run migrate:up && npm run test:lint:api",
+    "pretest:ops": "npm run migrate:up",
+    "pretest:db": "npm run migrate:up",
+    "pretest:all": "npm run migrate:up",
     "test:api": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/api/*.test.mjs",
+    "test:ops": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/ops/*.test.mjs",
+    "test:db": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/db/*.test.mjs",
+    "test:all": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/api/*.test.mjs tests/ops/*.test.mjs tests/db/*.test.mjs",
+    "test:ak47": "npm run test:ops",
+    "test:lint:api": "bash -lc \"if grep -R -n -E '\\\\b(db|pool|client)\\\\.query\\\\b|from\\\\s+[\\\"\\x27]pg[\\\"\\x27]|new\\\\s+Pool\\\\(' tests/api; then echo 'test:lint:api failed: SQL usage detected in tests/api'; exit 1; else echo 'test:lint:api ok'; fi\"",
     "lint:inventory-writes": "ts-node --transpile-only -r dotenv/config scripts/check-inventory-writes.ts",
     "inventory:health": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/inventory-health.ts",
     "backfill:movement-canonical": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/backfill-movement-canonical.ts",
