test: add ak47 stress harness and invariant log checks
- add runRepeated helper and update ak47 scripts to run ops suite repeatedly without migrations
- record/assert invariant logs in test setup and add ledger snapshot helper
- cover new ops scenarios (late QC commitments, cross-warehouse/multi receipts) and tighten existing cost layer tests

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "pretest:all": "npm run migrate:up",
     "test:api": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/api/*.test.mjs",
     "test:ops": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/ops/*.test.mjs",
+    "test:ops:nomigrate": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/ops/*.test.mjs",
     "test:db": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/db/*.test.mjs",
     "test:all": "node --test --test-reporter=spec --test-timeout=120000 --import ./tests/setup.mjs tests/api/*.test.mjs tests/ops/*.test.mjs tests/db/*.test.mjs",
-    "test:ak47": "npm run test:ops",
+    "test:ak47": "node tests/helpers/runRepeated.mjs --cmd \"npm run test:ops:nomigrate\" --times 5",
+    "test:ops:ak47": "node tests/helpers/runRepeated.mjs --cmd \"npm run test:ops:nomigrate\" --times 5",
     "test:lint:api": "bash -lc \"if grep -R -n -E '\\\\b(db|pool|client)\\\\.query\\\\b|from\\\\s+[\\\"\\x27]pg[\\\"\\x27]|new\\\\s+Pool\\\\(' tests/api; then echo 'test:lint:api failed: SQL usage detected in tests/api'; exit 1; else echo 'test:lint:api ok'; fi\"",
     "lint:inventory-writes": "ts-node --transpile-only -r dotenv/config scripts/check-inventory-writes.ts",
     "inventory:health": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/inventory-health.ts",
