hardening: make orphan root detection startup-safe with CASE-guarded SQL and structured detection-failed telemetry

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ CANONICAL_MOVEMENT_REQUIRED_AFTER=
 # Worker + queues (BullMQ)
 QUEUE_REDIS_URL=
 RUN_INPROCESS_JOBS=false
+# In development only, scheduler stays off unless explicitly enabled.
+ENABLE_SCHEDULER=false
 WORKER_REGISTER_JOBS=true
 WORKER_CONCURRENCY_CRITICAL=2
 WORKER_CONCURRENCY_HEAVY=1
@@ -46,6 +48,9 @@ INVENTORY_HEALTH_MAX_VALUE_VARIANCE=0
 INVENTORY_HEALTH_MAX_CYCLE_VARIANCE_PCT=2
 INVENTORY_HEALTH_FAIL_ON_NEGATIVE=true
 INVENTORY_HEALTH_CRON=0 * * * *
+# Optional invariant job scope (comma-separated tenant UUIDs).
+INVARIANTS_TENANT_ID=
+INVARIANTS_TENANT_IDS=
 
 # Integration resiliency defaults
 INTEGRATION_TIMEOUT_MS=5000
