--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "migrate": "npm run migrate:up",
-    "migrate:up": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate up --migrations-dir src/migrations --migrations-table inventory_schema_migrations --no-single-transaction",
-    "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations --no-single-transaction",
+    "migrate": "npm run migrate:up && npm run migrate:verify",
+    "migrate:up": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r dotenv/config -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate up --migrations-dir src/migrations --migrations-table inventory_schema_migrations --no-single-transaction",
+    "migrate:down": "NODE_PG_MIGRATE_TS_NODE=true TS_NODE_TRANSPILE_ONLY=true node -r dotenv/config -r ts-node/register -r tsconfig-paths/register ./node_modules/.bin/node-pg-migrate down --migrations-dir src/migrations --migrations-table inventory_schema_migrations --no-single-transaction",
+    "migrate:verify": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/verify-migration-state.ts",
     "dev": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/server.ts",
     "dev:watch": "NODE_ENV=development DEV_AUTO_REPAIR_DEFAULTS=true nodemon --watch src --ext ts --exec \"ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/server.ts\"",
     "db:reset": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/db-reset.ts",
     "db:reset:migrate": "npm run db:reset && npm run migrate",
+    "db:reset:migrate:seed": "CONFIRM_DB_RESET=1 ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/db-reset-migrate-seed.ts",
     "db:reset:dev": "ts-node --transpile-only -r tsconfig-paths/register scripts/reset-dev-db.ts",
     "db:reset-and-migrate:dev": "npm run db:reset:dev && npm run migrate:up",
     "db:conn:check": "ts-node --transpile-only -r tsconfig-paths/register scripts/db-conn-check.ts",
@@ -31,6 +33,8 @@
     "lint:inventory-writes": "ts-node --transpile-only -r dotenv/config scripts/check-inventory-writes.ts",
     "inventory:health": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/inventory-health.ts",
     "seed:warehouse-topology": "node scripts/seed_warehouse_topology.mjs",
+    "seed:warehouse-topology:default": "node scripts/seed_warehouse_topology.mjs --tenant-id 00000000-0000-0000-0000-000000000001 --fix",
+    "invariants:strict:default": "node scripts/inventory_invariants_check.mjs --tenant-id 00000000-0000-0000-0000-000000000001 --strict",
     "backfill:movement-canonical": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/backfill-movement-canonical.ts",
     "backfill:inventory-balance": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config scripts/backfill-inventory-balance.ts",
     "worker": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config src/worker.ts",
